fixed position element spacing

--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ html {
     box-sizing: inherit;
   }
 
+  body {
+      margin: 0;
+      padding: 0;
+  }
+
 :root {
     --dark-color: #000000;
     --light-color: #ffffff;
@@ -18,16 +23,26 @@ html {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+header {
+    margin: 0;
+    border: 0;
+    padding: 0;
+}
+
 .current-page {
-/*     text-orientation: sideways; */    
     display: flex;
     flex-direction: row;
-    align-content: center;
-    height: 30%;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    position: fixed;
 }
 
 .current-page h6 {
-    margin: 20px;
+    margin-top: 20px;
+    padding: 0;
+    border: 0;
+    text-align: center;
     writing-mode: vertical-rl;
     text-orientation: sideways;
     -webkit-transform: rotate(180deg);
@@ -43,6 +58,8 @@ html {
 .bullet-nav {
     display: flex;
     flex-direction: column;
+    height: 25%;
+    align-content: center;
     justify-content: space-between;
 }
 
@@ -51,34 +68,35 @@ html {
 }
 
 .period {
-    height: 25px;
-    width: 25px;
+    height: 10px;
+    width: 10px;
     background-color: var(--accent-color);
     border-radius: 50%;
-    display: inline-block;
+    
 }
 
-.intro-dot {
+.intro-bullet {
     background-color: var(--accent-color);
 }
 
-.about-dot {}
+.about-bullet {}
 
-.work-dot {}
+.work-bullet {}
 
-.cv-dot{}
+.cv-bullet {}
 
 .intro img {
-    width: 20%;
-    height: auto;
+    width: auto;
+    height: 60vh;
+    margin: 20px;
     
     /* flip horizontally */
     transform: rotateY(180deg);
 }
 
 #about-me-page img {
-    width: 20%;
-    height: auto;
+    width: auto;
+    height: 60vh;
 }
 
 .about-row {
@@ -90,6 +108,7 @@ html {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    align-content: center;
 }
 
 .sentence {
@@ -122,6 +141,8 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
+    position: fixed;
 }
 
 nav * {
@@ -129,15 +150,17 @@ nav * {
 }
 
 nav ul {
+    margin-right: 100px;
+    padding: 0;
     list-style-type: none;
+    width: 30vw;
     display: flex;
     justify-content: space-between;
-    padding: 0;
 }
 
 nav a {
     text-decoration: none;
-    margin-left: 20px;
+    /*margin-right: 20px;*/
 }
 
 nav .logo {
@@ -147,11 +170,15 @@ nav .logo {
 .intro {
     display: flex;
     flex-direction: row;
-    align-content: center;
+    align-items: center;
+    justify-content: center;
 }
 
 #splash-page {
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-content: center;
 }
 
 #about-me-page {
